--- a/premo2004_rr.bib
+++ b/premo2004_rr.bib
@@ -2,6 +2,20 @@
 % Encoding: UTF8
 
 
+@Article{Anselin1995,
+  Title                    = {Local indicators of spatial autocorrelation - LISA},
+  Author                   = {Luc Anselin},
+  Journal                  = {Geographical Analysis},
+  Year                     = {1995},
+  Pages                    = {93--115},
+  Volume                   = {27},
+
+  File                     = {Anselin1995.pdf:science_article/Anselin1995.pdf:PDF},
+  Keywords                 = {Spatial Autocorrelation, Spatial Analysis,},
+  Owner                    = {dncgst},
+  Timestamp                = {2016.07.15}
+}
+
 @Book{Bivand2008,
   Title                    = {{A}pplied spatial data analysis with {R}},
   Author                   = {Bivand, R. and Pebesma, E.J. and Rubio, V.G.},
@@ -33,6 +47,24 @@
   Owner                    = {dncgst},
   Timestamp                = {2016.08.24},
   Url                      = {http://www.jstor.org/stable/279989}
+}
+
+@Article{Cardillo2016,
+  Title                    = {Environment, space, and morphological variation of projectile points in Patagonia (Southern South America)},
+  Author                   = {Marcelo Cardillo and Karen Borrazzo and Judith Charlin},
+  Journal                  = {Quaternary International},
+  Year                     = {2016},
+  Note                     = {Advances in Arid Zone Archaeology: The 4th Southern Deserts Conference },
+  Pages                    = {44 - 56},
+  Volume                   = {422},
+
+  Doi                      = {http://dx.doi.org/10.1016/j.quaint.2015.11.134},
+  File                     = {Cardillo2016.pdf:science_article/Cardillo2016.pdf:PDF},
+  ISSN                     = {1040-6182},
+  Keywords                 = {Projectile points, Argentina, Patagonia, Geometric Morphometric, Lithic technology, Spatial Analysis, Spatial Autocorrelation, PCNM},
+  Owner                    = {dncgst},
+  Timestamp                = {2016.12.07},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S1040618215300641}
 }
 
 @Book{Dale2014,
